[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/autoloads/MusicManager.gd" type="Script" id=1]
[ext_resource path="res://sounds/bgm/Underground.ogg" type="AudioStream" id=2]
[ext_resource path="res://sounds/bgm/Sunless.ogg" type="AudioStream" id=3]
[ext_resource path="res://sounds/bgm/Fly.ogg" type="AudioStream" id=4]
[ext_resource path="res://sounds/bgm/March.ogg" type="AudioStream" id=5]
[ext_resource path="res://sounds/bgm/TuNiNuNiNiNu.ogg" type="AudioStream" id=6]
[ext_resource path="res://sounds/bgm/War.ogg" type="AudioStream" id=7]
[ext_resource path="res://sounds/bgm/Crazy.ogg" type="AudioStream" id=8]
[ext_resource path="res://sounds/bgm/ParallelWorld.ogg" type="AudioStream" id=9]
[ext_resource path="res://sounds/bgm/NeverSeeTheSun.ogg" type="AudioStream" id=10]
[ext_resource path="res://sounds/bgm/Digging.ogg" type="AudioStream" id=11]

[node name="MusicManager" type="Node"]
script = ExtResource( 1 )

[node name="Underground" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Sunless" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Fly" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="March" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="TuNiNuNiNiNu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="War" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Crazy" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="ParallelWorld" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="NeverSeeTheSun" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Digging" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="Tween" type="Tween" parent="."]
